# noctua

./: .gitignore  Cargo.toml  README.md  justfile
DEVNOTE/: Feature-Comparison.md  Traits-Enums-Comparison.md
docs/: features.md  usage.md
i18n/en/: noctua.ftl
resources/: org.codeberg.wfx.Noctua.desktop  org.codeberg.wfx.Noctua.metainfo.xml
src/: config.rs  constant.rs  i18n.rs  main.rs
src/app/: message.rs  mod.rs  model.rs  update.rs
src/app/document/: cache.rs  file.rs  meta.rs  mod.rs  portable.rs  raster.rs  utils.rs  vector.rs
src/app/view/: canvas.rs  footer.rs  header.rs  image_viewer.rs  mod.rs  panel_pages.rs  panels.rs
src/app/view/crop/: mod.rs  overlay.rs  selection.rs
src/application/commands/: crop_document.rs
src/domain/document/core/: content.rs
src/domain/document/operations/: crop.rs  mod.rs
src/domain/document/types/: portable.rs
src/ui/: app.rs  model.rs  sync.rs  update.rs
src/ui/views/: canvas.rs  header.rs
src/ui/widgets/: crop_model.rs  crop_overlay.rs  mod.rs
